--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 
 
   <!-- Подключаем библиотеку Query -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	
+  	<script src="js/jquery-3.4.1.min.js"></script>
   <!-- Подключаем скрипты слайдера -->
   <script src="js/jquery.bxslider.js"></script>
    <!-- Подключаем свой файл скриптов -->
